<resources>
    <string name="app_name">Gastro Grabs</string>
    <string name="button_addGrab">Add</string>
    <string name="hint_grabTitle">Grab title</string>
    <string name="hint_grabDescription">Grab description</string>
    <string name="hint_grabCategory">Grab Category</string>
    <string name="menu_viewGrab">View Grab</string>
    <string name="menu_addGrab">Add Grab</string>
    <string name="menu_editGrab">Edit</string>
    <string name="menu_cancelGrab">Cancel</string>
    <string name="enter_grab_title">Please include a Grab title</string>
    <string name="save_grab">Update</string>
    <string name="button_addImage"> Add an Image</string>
    <string name="select_grab_image">Select Grab image</string>
    <string name="change_grab_image">Change image</string>
    <string name="button_comment">Add</string>
    <string name="menu_deleteGrab">Delete</string>
    <string name="button_addLocation">Add Location</string>
    <string name="change_grab_location">Update Location</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="title_add">Add a new Grab</string>
    <string name="title_update">Make Changes</string>
    <string name="hint_comment">Add a New Comment</string>
    <string name="hint_delete">Click to Delete</string>
    <string name="empty_comment">Empty Comment not added</string>
    <string name="added_comment">Comment has been added</string>
    <string name="added_rating">Rating has been added</string>
    <string name="deleted_comment">Comment has been deleted</string>
    <string name="delete_comment">Click to delete</string>
    <string name="button_map">View Location</string>
    <string name="login_header">Enter Login Details</string>
    <string name="comments_header">Comments</string>
    <string name="button_login">LOGIN</string>
    <string name="hint_password">password</string>
    <string name="hint_email">email</string>
    <string name="enter_login">Email and Password must be entered!</string>
    <string name="login_fail">Login Details are Invalid</string>
    <string name="menu_signout">SignOut</string>
    <string name="signup_fail">Email is already signed up!</string>
    <string name="button_signup">SIGNUP</string>
    <string name="button_rating">submit</string>
    <string name="signUp_header">Enter Email and Password to Sign Up</string>
    <string name="or">or</string>
    <string name="added_by">Added By: </string>
    <string name="all_grabs">All</string>
    <string name="my_grabs">Just Mine</string>
    <string-array name="category_array">
        <item>Select Grab Category</item>
        <item>Sweet</item>
        <item>Savoury</item>
        <item>Wine</item>
        <item>Kids</item>
        <item>Christmas</item>
        <item>Cocktails</item>
        <item>Treat</item>
        <item>Everyday</item>
    </string-array>
    <string name="title_activity_gastro_grabs">GastroGrabs</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Grab Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="grabsNotFound">No Grabs...\nGo on add one!</string>
    <string name="addGrabError">Error : Couldn\'t Add this Grab...</string>

    <!-- START Firebase Resources-->

    <string name="label_emailpassword">Email/Password Authentication</string>
    <string name="desc_emailpassword">Use an email and password to authenticate with Firebase.</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="send_link">Send Link</string>
    <string name="sign_out">Sign Out</string>
    <string name="verify_email">Verify Email</string>
    <string name="disconnect">Disconnect</string>
    <string name="loading">Loading…</string>
    <string name="signed_in">Signed In</string>
    <string name="signed_out">Signed Out</string>
    <string name="token_null">Token: null</string>
<!--    <string name="hint_email">Email</string>-->
<!--    <string name="hint_password">Password</string>-->
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>
    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="emailpassword_title_text">Please Login Below</string>

    <string name="nav_header_subtitle">Tasty treats</string>

</resources>