<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="grab"
            type="org.wit.gastrograbs.ui.grabview.GrabViewViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.grabview.GrabViewFragment">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0">

            <TextView
                android:id="@+id/grabTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:fontFamily="sans-serif-black"
                android:maxLength="100"
                android:maxLines="1"
                android:padding="8dp"
                android:text="@{grab.observableGrab.title}"
                android:textAlignment="viewStart"
                android:textAllCaps="true"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="20sp"
                android:visibility="visible" />

            <TextView
                android:id="@+id/grabAddedBy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:maxLength="50"
                android:maxLines="1"
                android:padding="2dp"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="13sp"
                android:textStyle="italic"
                tools:text="testing email" />

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:columnCount="4">

                <TextView
                    android:id="@+id/grabAvRating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:background="@android:drawable/btn_star"
                    android:outlineSpotShadowColor="@color/colorPrimaryDark"
                    android:paddingVertical="6dp"
                    android:text="@{grab.observableGrab.avrating}"
                    android:textAlignment="center"
                    android:textColor="@color/colorAccent"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    tools:text="0" />

                <TextView
                    android:id="@+id/grabRatingDetail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="2"
                    android:outlineSpotShadowColor="@color/colorPrimaryDark"
                    android:paddingVertical="6dp"
                    android:textAlignment="center"
                    android:textColor="@color/colorAccent"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    tools:text="rating detail" />
            </GridLayout>

            <TextView
                android:id="@+id/grabDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:maxLength="100"
                android:maxLines="1"
                android:padding="8dp"
                android:text="@{grab.observableGrab.description}"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="14sp"
                android:visibility="gone" />

            <TextView
                android:id="@+id/grabCategory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:maxLength="25"
                android:maxLines="1"
                android:padding="8dp"
                android:text="@{grab.observableGrab.category}"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="16sp"
                android:textStyle="italic|bold"
                android:visibility="gone" />

            <ImageView
                android:id="@+id/grabImage"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="4dp"
                android:contentDescription="@string/change_grab_image"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <Button
                android:id="@+id/btnViewMap"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="5dp"
                android:background="@color/colorAccent"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:stateListAnimator="@null"
                android:text="@string/button_map"
                android:textColor="#263238"
                android:textSize="10sp"
                android:visibility="gone" />

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:columnCount="4">

                <RatingBar
                    android:id="@+id/ratingBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:numStars="5"
                    android:stepSize=".5" />

                <Button
                    android:id="@+id/btnAddRating"
                    android:layout_width="115dp"
                    android:layout_height="wrap_content"
                    android:layout_column="3"
                    android:layout_margin="5dp"
                    android:background="@color/colorAccent"
                    android:paddingTop="3dp"
                    android:paddingBottom="3dp"
                    android:stateListAnimator="@null"
                    android:text="@string/button_rating"
                    android:textColor="@color/colorPrimary"
                    android:textSize="11sp" />
            </GridLayout>

            <TextView
                android:id="@+id/commentHeader"
                style="?android:attr/listSeparatorTextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:maxLength="100"
                android:maxLines="1"
                android:padding="8dp"
                android:text="@string/comments_header"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="14sp" />

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:columnCount="4">

                <Button
                    android:id="@+id/btnAddComment"
                    android:layout_width="30pt"
                    android:layout_height="wrap_content"
                    android:layout_column="3"
                    android:layout_margin="5dp"
                    android:background="@color/colorAccent"
                    android:paddingTop="3dp"
                    android:paddingBottom="3dp"
                    android:stateListAnimator="@null"
                    android:text="@string/button_comment"
                    android:textColor="@color/colorPrimary"
                    android:textSize="11sp" />


                <EditText
                    android:id="@+id/newComment"
                    android:layout_width="140pt"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:layout_margin="8dp"
                    android:hint="@string/hint_comment"
                    android:inputType="text"
                    android:maxLength="100"
                    android:maxLines="3"
                    android:padding="8dp"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="14sp" />
            </GridLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewComment"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scrollbars="vertical"
                app:layout_behavior="@string/appbar_scrolling_view_behavior" />

        </LinearLayout>
        <!--        </ScrollView>-->


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>