<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.GrabViewActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:fitsSystemWindows="true"
            app:elevation="0dip"
            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbarAdd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:titleTextColor="@color/colorPrimary" />
        </com.google.android.material.appbar.AppBarLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/appBarLayout"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/grabDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:maxLength="100"
                    android:maxLines="1"
                    android:padding="8dp"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="14sp"
                    android:visibility="gone"/>

                <TextView
                    android:id="@+id/grabCategory"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:layout_gravity="right"
                    android:maxLength="25"
                    android:maxLines="1"
                    android:padding="8dp"
                    android:textStyle="italic|bold"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="16sp"
                    android:visibility="gone"/>

               <ImageView
                    android:id="@+id/grabImage"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="4dp"
                    android:contentDescription="@string/change_grab_image"
                    android:visibility="gone"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/btnViewMap"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:background="@color/colorAccent"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:stateListAnimator="@null"
                    android:text="@string/button_map"
                    android:textColor="@color/colorPrimary"
                    android:textSize="10sp"
                    android:visibility="gone"/>

                <TextView
                    android:id="@+id/commentHeader"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:maxLength="100"
                    android:maxLines="1"
                    android:padding="8dp"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="14sp"
                    android:text="Comments"
                    style="?android:attr/listSeparatorTextViewStyle" />

                <GridLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:columnCount="4">

                <Button
                    android:id="@+id/btnAddComment"
                    android:layout_width="30pt"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_column="3"
                    android:background="@color/colorAccent"
                    android:paddingTop="3dp"
                    android:paddingBottom="3dp"
                    android:stateListAnimator="@null"
                    android:textColor="@color/colorPrimary"
                    android:textSize="11sp"
                    android:text="@string/button_comment"/>


                <EditText
                    android:id="@+id/newComment"
                    android:layout_width="140pt"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:hint="@string/hint_comment"
                    android:inputType="text"
                    android:layout_column="1"
                    android:maxLength="100"
                    android:maxLines="3"
                    android:padding="8dp"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="14sp" />
                </GridLayout>
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerViewComment"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scrollbars="vertical"
                    app:layout_behavior="@string/appbar_scrolling_view_behavior" />
            </LinearLayout>
        </ScrollView>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>